--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav a:hover {
 
 .subtitle {
     font-size: 1.2rem;
-    color: #a0a0a0;
+    color: #bd4d21;
     margin-top: 0.5rem;
 }
 
@@ -445,5 +445,23 @@ nav a:hover {
     display: none;
 }
 
-
 /* === MAP PAGE === */
+
+/* == BATTLE REPORT PAGE == */
+@keyframes skaven-shake {
+    0% { transform: rotate(-1deg) translate(0, 0); }
+    25% { transform: rotate(1deg) translate(1px, -1px); }
+    50% { transform: rotate(0deg) translate(-1px, 1px); }
+    75% { transform: rotate(1deg) translate(2px, 0); }
+    100% { transform: rotate(-1deg) translate(0, 0px); }
+}
+
+.skaven-shake {
+    animation: skaven-shake 1.5s infinite;
+}
+
+/* battle report wrapper */
+
+
+
+/* == BATTLE REPORT PAGE == */
